--- a/roobiology.html
+++ b/roobiology.html
@@ -248,19 +248,18 @@
 			<div class="section">
 				<span class="A-audiobook">The Curse of the Pythia rendered almost all Gallifreyans are sterile. </span><span class="A-audiobook"><span class="A-notbbc"><span class="A-tv">Some Gallifreyans claim that their species is immune to being seduced with erotic temptation.</span></span></span><span class="A-audiobook"> Though they are physically capable of sex
 					<span class="A-notbbc">most have almost no sex drive.
-						<span class="A-audiobook"> Many, like </span><span class="A-tv">the Doctor, live most of their lives in celibacy. </span></span></span><span class="A-audiobook">For these reasons, each Chapterhouse has one Genetic Loom Breeding-Engine with a unique genetic core to loom its cousins. </span>
-				<span class="A-notbbc">Each Chapterhouse has a loomshed, which holds the House’s Loom. </span>
+						<span class="A-audiobook"> Many, like </span><span class="A-tv">the Doctor, live most of their lives in celibacy. </span></span></span><span class="A-audiobook">For these reasons, each Chapterhouse has one Genetic Loom Breeding-Engine with a unique genetic core to loom its cousins.</span><span class="A-notbbc"></span>
 				<span class="A-audiobook"> Every Gallifreyan is born into one of Rassilon’s Great Houses and the Honorable Central Population Directory defines
 					the quota of cousins for each House's Loom. </span>
 				<span class="A-game">This directory is directly controlled by the High Council.</span>
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid. </span>They
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.&nbsp; </span>They
 smell of tangy celestial potental. The frames of some looms are silver.
 A new loom probably takes over 11 years to produce its first loomling. </span>
-				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own Loom core, which serves as
-					its genius loci. This creates a template that standardizes the abilities
+				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own genetic Loom core, which serves as
+					its genius loci.<span class="A-notbbc"> Using its biodata extractor,</span> this core creates a template that standardizes the abilities
 					<span class="A-alternate">and blood </span>of everyone loomling of that family. </span>
 				<span class="A-notbbc">Members of each house have minor variations in abilities unique to their house. </span>
 				<span class="A-alternate">An experienced vampire can tell which house a Gallifreyan came from by the taste of their blood. </span>
@@ -650,7 +649,7 @@ caused by sudden changes in position. <span class="A-tv">They also appear to hav
 				<span class="A-audiobook">Most Gallifreyans are loomed with one heart. When they regenerate for the first time they acquire a second heart
 					<span class="A-licensed">that is a mirror image of the first. </span>
 				</span>
-				<span class="A-audiobook"> Newblood Gallifreyans are loomed with two hearts and have excellent control over their appearance when regenerating. </span>
+				<span class="A-audiobook"> Newblood Gallifreyans are loomed with two hearts, making them bicardial from the begining. </span>
 				<span class="A-audiobook">
 					<span class="A-audiobook">A Gallifreyan’s second heart helps with their fast healing (limbic gland?), allows them to go without sleep,
 						<span class="A-licensed">gives them greater strength and endurance, and resist temporal shocks. </span> It is part of the respiratory bypass
@@ -764,8 +763,8 @@ done the effect can last for less the a few weeks or for years.</span></span>
 				<span class="A-audiobook">It
 took several generations of genetic engineering to re-introduce psychic
 abilities to the loom born Gallifreyans, but in the modern era, all
-Gallifreyans are psychic (Though some have greater psionic sensitivity
-then others). The Epiphysis Cerebri (pineal gland)‎‎ on a Gallifreyan is
+Gallifreyans are psychic. &nbsp;Though some have greater psionic sensitivity
+then others, <span class="A-notbbc">most are low level telepaths.</span> The Epiphysis Cerebri (pineal gland)‎‎ on a Gallifreyan is
 twice the size of a humans. It is sometimes known as the Third Eye and
 is the part of the brain that is the source of psychic activity.
 Gallifreyan psionics work via neural congruence and sympathetic
@@ -846,10 +845,13 @@ absorb a dying Gallifreyan's memories. </span>
 			<h2>GENERAL GALLIFREYAN BIOLOGY</h2>
 			<div class="section">
 				<span class="A-licensed">
-					<span class="A-audiobook">Aside from two extra ribs (for a total of 26) </span>a Gallifreyan's skeleton is almost identical to a humans.
-					<span class="A-audiobook">Their teeth are immune to normal forms of tooth decay, so they never needed to brush their teeth.&nbsp;</span></span><span class="A-tv">However, when damaged, they can end up needing fillings inserted in their teeth.&nbsp;<span class="A-audiobook">These fillings are supposed to regenerate when their body regenerates (though this process isn't perfect). </span></span><span class="A-licensed">By human standards, most Gallifreyans are tall, with solemn, learned faces.</span><span class="A-licensed"><span class="A-audiobook"></span>
+					<span class="A-audiobook">Gallifreyans are bipedal. Aside from two extra ribs (for a total of 26) </span>a Gallifreyan's skeleton is almost identical to a humans.
+					<span class="A-audiobook">Their teeth are immune to normal forms of tooth decay, so they never needed to brush their teeth.&nbsp;</span></span><span class="A-tv">However, when damaged, they can end up needing fillings inserted in their teeth.&nbsp;<span class="A-audiobook">These
+fillings are supposed to regenerate when their body regenerates (though
+this process isn't perfect). By human standards, most Gallifreyans are
+1.5 - 2 meters tall,</span></span><span class="A-licensed"></span><span class="A-licensed"> with solemn, learned faces.</span><span class="A-licensed"><span class="A-audiobook"></span>
 				</span>
-				<span class="A-audiobook">Gallifreyans have got multiple organs of virtually everything. They have 2 of most of the organs that humans have only
+				<span class="A-audiobook"><br><br>Gallifreyans have got multiple organs of virtually everything. They have 2 of most of the organs that humans have only
 					one of, and 4 of the organs that humans have only two of. </span>
 				<span class="A-audiobook">
 					<span class="A-audiobook">Some sources say the have only one liver, others say two</span>
@@ -950,20 +952,19 @@ emotions and impressions from there senses can be perceived. </span>
 					of this causes a massive pulmonary and cerebral embolism, severe enough to prevent regeneration. Even touching Aspirin
 					can be dangerous. Detox can be used to negate aspirin poisoning if the Gallifreyan can consume some chocolate. The simple
 					triglycerides in the chocolate combats the anti-platelets effect of the aspirin.
-					<span class="A-tv">The Detox procedure doesn't work for all toxins.</span>
-				</span>
+					<span class="A-tv">The Detox procedure doesn't work for all toxins.&nbsp;</span></span><span class="A-tv">While aspirin (and many other human medicines) is toxic to a Gallifreyan metabolism,
+					they can handle 20th century broad spectrum antibiotics without significant trouble.</span>
 			</div>
-			<div class="section">
+			<div class="section A-audiobook">
 				<span class="A-audiobook">Adrenalin significantly improves a Gallifreyan’s coordination. They have endorphins that are produced up when they
 					are feeling exhilarated, <span class="A-licensed">but are not released while exercising (unlike in Humans).</span> </span>
 				<span class="A-game">Kicking their two hearts and bi-vascular system into overdrive lets their whole body run at double a human's rates. This
 					causes them pain and some dizziness – but gives them vast reservoirs of stamina. </span>
 				<span class="A-audiobook">Gallifreyans don't have prostate glands. When trained they can control their adrenaline, blood-sugar levels, heart rate,
 					respiration, and perspiration to the point where they can fool 23rd century medical diagnostics into thinking they are
-					human. They can even switch off any of their organs at will. They also have control over the speed and location of their
+					human. They can even switch off any of their organs at will. <br><br>They also have control over the speed and location of their
 					hair growth. They can grow hair faster then humans or stop the growth completely. Despite this </span>
-				<span class="A-tv">some Gallifreyans still shave their faces. While aspirin (and many other human medicines) is toxic to a Gallifreyan metabolism,
-					they can handle 20th century broad spectrum antibiotics without significant trouble. </span>
+				<span class="A-tv">some Gallifreyans still shave their faces.&nbsp;</span><span class="A-audiobook">TThe most common hair colors are&nbsp;black, brown, blond, and </span><span class="A-audiobook">white.</span>
 			</div>
 			<div class="section">
 				<span class="A-audiobook">While a Gallifreyan's skin often smells like honey,
@@ -1467,9 +1468,9 @@ needed.&nbsp;While sleep and healing trances are perfectly safe,</span> being vi
 				<span class="A-tv">Within the </span>
 				<span class="A-tv">first 15 hours of regeneration a Gallifreyan will still have enough residual cellular energy
 					<span class="A-game">to cause several unpredictable effects. </span>This energy can be used to heal many types of physical damage. </span>
-				<span class="A-tv">Deadly falls, and multiple bullet wounds will heal instantly, and they might be able to survive a gun shot to the head.
-				</span>
-				<span class="A-tv">They
+				<span class="A-tv">Deadly
+falls, and multiple bullet wounds will heal near instantly, and they
+might be able to survive a gun shot to the head.&nbsp;</span><span class="A-tv">Recovery is fast enough that even severed arteries&nbsp;generaly won't have time to bleed. They
 can even regrow a severed body part, such as a hand. The energy can be
 discharged causing destructive effects to people or objects that are
 hit by it.</span>
