--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -412,7 +412,7 @@ to its rotational axis). These twin suns </span>
 			<div class="section">
 				<span class="A-tv">Karn
 is probably the second planet in the system, and is only a few billion
-miles (could be SI or European "billion") from Gallifrey. <span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span><span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, </span><span class="A-alternate">who have mostly abandoned science. </span><span class="A-game"><span class="A-licensed">In ancient times the world might have been known as Winter. </span>The planet Sarn might later become known as Karn in the future. </span>Parts of Karn are covered in hexagonal crystalline rock formation.  </span><span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span><span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. </span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.</span>
+miles (could be SI or European "billion") from Gallifrey.&nbsp;<span class="A-alternate">Karn has one moon. <span class="A-licensed">The planet is divided up into 7 provinces, one of which is called Seazalon.</span> The ruins of the Citadel of Karn, once the center of the mighty Gallifreyan Empire, can be found there. </span><span class="A-audiobook">In the modern era, Karn appears to have population of no more then a few million, </span><span class="A-alternate">who have mostly abandoned science. </span><span class="A-game"><span class="A-licensed">In ancient times the world might have been known as Winter. </span></span></span><span class="A-tv">The Sisterhood of the Flame</span><span class="A-tv"><span class="A-game"><span class="A-licensed">&nbsp;</span></span></span><span class="A-tv"><span class="A-audiobook">were founded by a group of Shobogans who fled Gallifrey during the Intuitive Revolution.</span></span><span class="A-tv"><span class="A-game"><span class="A-licensed"> They have a secret portal that connects back to the Capitol on Gallifrey. </span>The planet Sarn might later become known as Karn in the future. </span>Parts of Karn are covered in hexagonal crystalline rock formation.  </span><span class="A-fanon">If Gallifrey had similarly rock formations it could explain the importance of hexagons in their mythology. </span><span class="A-audiobook">Most parts of the planet experience almost continual electrical storms and rain fall. </span><span class="A-alternate">After the fall of civilization on Karn the Giant Land Crab evolved.</span>
 			</div>
 			<div class="article A-audiobook" id="planet" style="padding-top: 130px; margin-top: -130px;">
 				<figure>
@@ -546,7 +546,7 @@ Depending on conditions </span><span class="A-tv">the moon appears to be copper 
 					<span class="A-audiobook">Many of the river beds are dry.</span>
 					<span class="A-audiobook"> There are some green forests, and golden fields strewn with rubble - but they make up a minority of the terrain.</span>
 					<span class="A-audiobook"> </span>
-					<span class="A-audiobook">Before the Time War there are only between 3 and 9 million Gallifreyans, which leaves many settlements and roads completely
+					<span class="A-audiobook">Before the Time War there are only between 3 and 9 million Gallifreyans, <span class="A-game">most of which live in the Capitol.</span> This leaves many ancient settlements and roads completely
 						abandoned.</span>
 					<span class="A-audiobook">
 						<span class="A-alternate">The undeveloped areas of Gallifrey are known as the Wild-Lands. </span>
@@ -815,7 +815,7 @@ Xeno-Zoos that hold alien creatures from other worlds. </span>
 					<span class="A-audiobook">Fledershrews (bat-like, mushroom eaters, that are nearly extinct),</span>
 					<span class="A-audiobook">
 Cobblemice (which sprout wings), Rovie Mice (live in fields, long lived
-if they are not killed, sometimes kept as pets), Vex (burrowing
+if they are not killed, sometimes kept as pets), <span class="A-notbbc">Moss-Rats,</span> Vex (burrowing
 animal), Gallifreyan Womprats (1 meter long rats with fifteen legs),
 Pig-Rats (which live in the Drylands), Rabbits, </span><span class="A-audiobook"><span class="A-licensed"></span>Flubbles (small six-legged koalas), an animal similar to a rabbit, but rounder, </span>
 					<span class="A-audiobook">Sealak (often eaten), <span class="A-licensed">Bear-Ass (a donkey like animal with bear-like qualities),</span> Horse-Cats,&nbsp;</span><span class="A-audiobook"><span class="A-licensed"></span>Elephants, </span>
@@ -844,7 +844,7 @@ eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 					<figcaption><span class="A-tv">A Shobogan </span><span class="A-fanon">and a possible pre-Neanderthal Gallifreyan?</span></figcaption>
 				</figure>
 				<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
-				<h2>SHOBOGANS (Pre-Rassilon Gallifreyans)&nbsp;</h2>
+				<h2>SHOBOGANS (Pre-Curse Gallifreyans)&nbsp;</h2>
 				<div class="section A-tv">
 					<span class="A-audiobook">The first Neanderthal Gallifreyans evolved </span>
 					<span class="A-fanon"> about 10 million years before the time of Rassilon. </span>
@@ -859,7 +859,11 @@ eats cerub nuts), <span class="A-audiobook">cows, and probably walrus.</span>
 					<span class="A-audiobook">The Constructors of Destiny modify the Gallifreyan Neanderthals to fulfill their destiny.
 						<span class="A-fanon">This </span>
 						<span class="A-tv">exposure to the Untempered Schism, over billions of years of evolution, allows the Gallifreyans to become sensitive
-							to time </span>and its movement. <span class="A-tv">They called themselves the Shobogans.</span>&nbsp; </span>
+							to time </span>and
+its movement. A common side effect of a species living next to a
+wormhole over a few centuries is that the populace will develop psionic
+powers.&nbsp;Such exposure can also cause rapid mutations (again, like
+the marshmen of Alzarius). <span class="A-tv">This new species called themselves the Shobogans.</span>&nbsp; </span>
 				</div>
 				<div class="section">
 					<figure>
