--- a/roogovernment.html
+++ b/roogovernment.html
@@ -264,34 +264,29 @@ capped mountains of Solace and Solitude. These are part of a <span class="A-audi
 				<span class="A-game">By Human standards the Capitol doesn't appear to be that large of a city, but
 					<span class="A-audiobook">the dimensionally transcendental nature of a few of its buildings</span> makes </span>
 				<span class="A-game">it the biggest and </span>
-				<span class="A-infinity">most heavily populated city on the planet.
-					<span class="A-game">Over half the planet's population </span>
-					<span class="A-audiobook">(at least several thousand, </span>
-					<span class="A-game">probably several million) </span>
-				</span>
-				<span class="A-audiobook">live in the Capitol and </span>
-				<span class="A-tv">many
-Time Lords never leave the Capitol. A large glass dome covers the
+				<span class="A-infinity">most heavily populated city on the planet. <span class="A-game">Almost all Gallifreyans live in the Capitol,<span class="A-audiobook"> giving it a population of </span></span></span><span class="A-infinity"><span class="A-game">several&nbsp;million</span>&nbsp;<span class="A-audiobook">(at least several thousand, </span>
+					<span class="A-game">possibly 8&nbsp;million).</span></span><span class="A-audiobook">&nbsp;</span><span class="A-tv">A large glass dome covers the
 Capitol. The shaft the Capitol sits in the middle of is bordered by a
 circular <span class="A-audiobook">white</span> wall. </span>
 				<span class="A-audiobook">Only a few of the buildings in the Capitol are dimensionally transcendental. </span><span class="A-audiobook">It would take modern
 					Time Lords thousands of years to rebuild the entire Capitol, and re-create the transduction barriers. <br><br></span><span class="A-audiobook"><span class="A-licensed">The entire Capitol is filled with a sense of silent timelessness. </span>Gallifrey </span>
 				<span class="A-fanon"> (the Capitol?)</span>
-				<span class="A-audiobook"> smells of cloisters, libraries, vellum, and old excitonic circuitry. Candles are very common. </span><span class="A-alternate">The strong and ridged gravinium is the most common building material on Gallifrey.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook">The
+				<span class="A-audiobook"> smells of cloisters, libraries, vellum, and old excitonic circuitry.&nbsp;</span><span class="A-alternate">The strong and ridged gravinium is the most common building material on Gallifrey.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook">The
 floor plates have titanium rivets.&nbsp;Most of the walls in the
 Citadel appear to be made of stone with dim green light leaking out
 from the cracks in the aging walls. Unused corridors are filled with
-dust. The architecture is filled with fountains and alcoves. There are
-also many gardens with their own domes. </span><span class="A-audiobook">The decor of the Capitol<span class="A-fanon"> </span>can be changed in the same way that a TARDIS’s desk-top theme can be changed. </span><span class="A-tv">They
-often to use the valuable brass-like Machenite as the building material
-of choice for the interior of important rooms.&nbsp;</span><span class="A-audiobook">The streets of the Capitol are patrolled by </span>
-				<span class="A-notbbc"> automated street cleaning mechanisms. </span>
+dust. The architecture is filled with fountains and alcoves. </span><span class="A-audiobook">Candles are very common. </span><span class="A-audiobook">There are
+also many gardens with their own domes. </span><span class="A-audiobook">The decor of the Capitol<span class="A-fanon"> </span>can be changed in the same way that a TARDIS’s desk-top theme can be changed. </span><span class="A-tv">Gallifreyans
+often to use the valuable, brass-like, Machenite as the&nbsp; material
+of choice for the interior of important rooms. </span><span class="A-audiobook"><br><br><span class="A-tv">One of the functions of the <span class="A-licensed">Central</span> Matrix is to monitor all events in the Capitol and predict future developments within the Capitol. </span>There
+is a dedicated Sub-Matrix which handles the basic functions of Capitol,
+like transductions. The streets of the Capitol are patrolled by </span>
+				<span class="A-notbbc"> automated <span class="A-audiobook">street cleaning mechanisms. </span><br></span><span class="A-audiobook"></span><span class="A-tv"></span>
 				<p>
 				<span class="A-audiobook">Council </span>
-				<span class="A-tv">members use<span class="A-audiobook"> transtubes and</span> air-cars to get around the Capitol,<span class="A-licensed">
-but there are at least 49 metal doored External Gates that alow one to
-exit&nbsp;the Capitol at ground level (most of which haven't been
-opened in a century). </span></span><span class="A-audiobook">A small conventional spaceport can be found<span class="A-licensed"> just outside</span> the Capitol dome (probably the Desiree Spaceport). Time Scaphs can be found docked the Scaph Port. </span>
+				<span class="A-tv">members use<span class="A-audiobook"> transtubes and</span> air-cars to get around inside the Capitol.</span><span class="A-tv"></span><span class="A-tv"><span class="A-licensed">&nbsp;There are at least 49 External Gates (with metal doors) that alow one to
+exit&nbsp;the Capitol at ground level, </span></span><span class="A-tv">but many Time Lords actually never leave the Capitol. </span><span class="A-tv"><span class="A-licensed">Most of these metal doors haven't been
+opened in a century.</span></span><span class="A-tv"> </span><span class="A-tv"></span><span class="A-audiobook">A small conventional spaceport can be found<span class="A-licensed"> just outside</span> the Capitol dome (probably the Desiree Spaceport). Time Scaphs can be found docked the Scaph Port. </span>
 				</p>
 				<p>
 				<span class="A-audiobook">The capitol is broken up into <span class="A-licensed">6 </span>numbered sectors and all the rooms are numbered (example Room 30007 in the Administrative Complex<span class="A-fanon"> - probably Sector 3). <span class="A-licensed"></span></span></span><span class="A-tv"><span class="A-licensed">Sectors 1-6 designate the Great Citadel and the High City towers attached to and protruding from the conical base of that
@@ -367,7 +362,7 @@ Pandak IV, Pandak XX, and Rassilon. </span><span class="A-licensed">On
 either side of the main entrance are antechambers were the ceromonial
 collars and robes of the Time Lords are stored. A similar presidential
 antechamber is a attached to the entrance above the main dais.&nbsp;</span><span class="A-tv">Down a short corridor from the Panopticon is the <span class="A-audiobook">Great</span>
-Chamber of the Matrix. The Matrix Portal hear allows authorized Time
+Chamber of the Matrix. The Matrix Door found here allows authorized Time
 Lords access to the repository of all Time Lord knowledge. For more
 information on the Matrix see </span><a href="rooweb.html#matrix">The Matrix of Time</a><span class="A-tv">&nbsp;A famously effective polygonal Zero Room<span class="A-audiobook"> (created by the Other)</span> can be found in the basement of the Junior Senate Block.</span></p><div class="section">
 				<figure>
@@ -393,11 +388,11 @@ has already begun. It needs presidential authority to enact. </span></span><span
 					<span class="A-audiobook">to be a private area</span> for the President to meet with the rest of the Inner Council
 					<span class="A-audiobook">in secret. This room has a </span>
 				</span>
-				<span class="A-tv">Matrix Portal mounted above the debating table and a secret door that leads to the controls for the Time Scoop. </span>
+				<span class="A-tv">Matrix Portal mounted above the debating table <span class="A-fanon">(likely the President's 'personal' 8th Door)</span> and a secret door that leads to the controls for the Time Scoop. </span>
 				<span class="A-audiobook">This room is only used about once every thousand years and serves as a storage for lesser know artifacts of Rassilon.&nbsp;</span><span class="A-tv">Normally the Inner Council meets in the
 					<span class="A-licensed">Great </span>Hall </span>
 				<span class="A-licensed">of Time </span>
-				<span class="A-tv">where one of the Matrix Portals is mounted.&nbsp;</span><span class="A-tv"></span>
+				<span class="A-tv">where another of the Matrix Portals is mounted.&nbsp;</span><span class="A-tv"></span>
 			</div>
 			<div class="section">
 				<figure>
@@ -475,12 +470,12 @@ the title of Time Lord) it is annexed to the Citadel <span class="A-fanon">using
 					<img src="images/barriercontrols.jpg" alt="Controls for Transduction Barriers">
 					<figcaption class="A-tv">The Traffic Control Room and the controls for Transduction Barriers</figcaption>
 				</figure>
-				<span style="font-weight: bold;" class="A-tv"><span class="A-licensed"></span></span><span class="A-licensed"></span><span class="A-audiobook"><br><br class="A-tv"></span><span style="font-weight: bold;" class="A-tv"><span class="A-audiobook">MidTown </span>Sector 7: </span><span class="A-audiobook">Beneath the upper levels of the Citadel is <span class="A-licensed">Sector 7, which is known as</span> MidTown. It extends all the way to the mountain side (either the mountain of Solace or the mountian of Solitude) </span><span class="A-audiobook">There are a total of 363 white towers arrayed in a circular pattern around the Presidential Wheel. </span><span class="A-game">Many of the surrounding towers are helical in design. </span><span class="A-licensed">There is a statue of Omega located just
+				<span style="font-weight: bold;" class="A-tv"><span class="A-licensed"></span></span><span class="A-licensed"></span><span class="A-audiobook"><br></span><span style="font-weight: bold;" class="A-tv"><span class="A-audiobook">MidTown </span>Sector 7: </span><span class="A-audiobook">Beneath the upper levels of the Citadel is <span class="A-licensed">Sector 7, which is known as</span> MidTown. It extends all the way to the mountain side (either the mountain of Solace or the mountian of Solitude). </span><span class="A-audiobook">There are a total of 363 white towers arrayed in a circular pattern around the Presidential Wheel. </span><span class="A-game">Many of the surrounding towers are helical in design. </span><span class="A-licensed">There is a statue of Omega located just
 outside the Citadel which dates back to the Time of Legend (making it
-one of the most ancient features of the Capitol). &nbsp;The original Time Capsule Growth Foundry was located near this statue.</span> <br><span class="A-game"><br></span><span class="A-tv">The 53 story Communications Tower is&nbsp;</span><span class="A-tv">just outside the Citadel </span><span class="A-tv">in Sector 7. <span class="A-licensed">The tower holds </span></span><span class="A-tv">Traffic
+one of the most ancient features of the Capitol). The original Time Capsule Growth Foundry was located near this statue.</span> <br><span class="A-game"><br></span><span class="A-tv">The 53 story Communications Tower is&nbsp;</span><span class="A-tv">just outside the Citadel </span><span class="A-tv">in Sector 7. <span class="A-licensed">The tower holds </span></span><span class="A-tv">Traffic
 Control, which is one of the highest security-rated rooms in the
-Citadel. Every ship passing through the Kasterborus Sector is carefully
-monitored. </span><span class="A-tv"><span class="A-fanon">Because of that location Power Mast on level 31 of Sector 1,</span> Level 31 <span class="A-licensed">of&nbsp;sector 7 of</span> the Citadel also houses the controls for the Transduction Barriers and the Quantum Force-Fields. </span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook">&nbsp;</span><span class="A-infinity"></span>
+Capitol. Every ship passing through the Kasterborus Sector is carefully
+monitored. </span><span class="A-tv"><span class="A-fanon">Because of the location of the Power Mast on level 31 of Sector 1,</span> Level 31 <span class="A-licensed">of&nbsp;sector 7 of</span> the Citadel also houses the controls for the Transduction Barriers and the Quantum Force-Fields. </span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook">&nbsp;</span><span class="A-infinity"></span>
 			</div>
 			<div class="section">
 				<figure>
@@ -497,7 +492,7 @@ around a massive Infinity Chamber. Above it are public galleries.&nbsp;
 Like Traffic Control, the security systems here are quite extensive.<br></span><span class="A-audiobook"><br>There
 are two huge towers in the north of the Capitol named Canonicity and
 Likelihood. Both of these building are among the few that are
-dimensionally transcendental.&nbsp;</span><span class="A-fanon">The Doctor's Trial in War Games was held in the tower of Canonicity. &nbsp;The tower of Likelihood might be home to the </span>
+dimensionally transcendental.&nbsp;</span><span class="A-fanon">The Doctor's Trial in War Games was held in the tower of Canonicity. The tower of Likelihood might be home to the </span>
 				<span class="A-audiobook">Bureau of Possible Events. </span><span class="A-audiobook">Sector 7 might hold Tower Alpha 7.</span><br><span class="A-licensed">&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook"><br>
 				MidTown has a Multi-Dimensional Art Gallery </span><span class="A-audiobook"><span class="A-licensed">beneath the Capitol. &nbsp;</span></span><span class="A-audiobook">It is filled with vast numbers
 of computer created paintings from throughout Gallifrey's history, </span><span class="A-audiobook"><span class="A-licensed">but N-Forms are no longer displayed. </span></span><span class="A-audiobook"></span><span class="A-audiobook"></span><span class="A-audiobook"><span class="A-licensed"></span><br><br>Scientific research is done in the Penansulix Scientific Structure <span class="A-licensed">(adjacent to Sector 4's Jasidary Building).</span>
@@ -1124,7 +1119,7 @@ cataloging everything. The few Patrexes who do rise to the first rank
 					<span class="A-notbbc">Under the Worshipful and Ancient Law of Gallifrey, a member of any House can give up the protection of their House and
 						become the Kithriarch of a new House with a new Chapterhouse and Loom. The founder of a new House carries the title
 						Grandfather. A Renegade Time Lord traditionally renounces his name and his house.</span><br><span class="A-audiobook"><br>The
-	physical houses are sentient and the oldest living thing on the planet.
+	physical houses are cryptoformed and sentient. They are the oldest living things on the planet.
 	Their roots extend deep into the ground beneath them. The interior of a House and its furniture are designed to a massive
 						scale to give newly loomed Gallifreyans a chance to feel like child</span><span class="A-tv"><span class="A-game"><span class="A-notbbc">rene</span></span></span><span class="A-audiobook">.
 	The artificially animated furniture needs to be house trained,
