--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -813,7 +813,7 @@ The shops and stalls in the city of Prydos have foods from across the
 cosmos – even from the Earth and Venus. Concept shops in Prydos City
 sell ideas from across the cosmos.</span>&nbsp; </span></span><span class="A-audiobook"><span class="A-fanon"><br><br></span></span><span class="A-infinity"><span class="A-game"><span class="A-licensed">Prydos,</span>
 Arcalia, and Patrexi <span class="A-licensed">are
-'academy' cities surrounded by stone walls.&nbsp;The Ground around
+'academy' cities surrounded by stone walls.&nbsp;The ground around
 every city's entrances are covered in gravel-like Sound Shingles which
 allow automated systems to detect people approaching the metal
 doors.&nbsp;</span></span></span><span class="A-infinity">Olyesti is one of the Three Minute Cities in the East.
@@ -839,16 +839,16 @@ traditions and technology of the Time Lords and become Outsiders. <span class="A
 					</figure>
 					<div class="section">
 						<span class="A-tv">The cities of Gallifrey are filled with spires, temples, and cathedrals, </span>
-						<span class="A-audiobook">recreation centers, libraries, and universities. </span><span class="A-audiobook">Their buildings are opulently decorated with ionic columns and gold
+						<span class="A-audiobook">recreation centers, libraries, and universities. </span><span class="A-audiobook"><span class="A-game">The ability to make structures dimensionally transcendent is used in most Gallifreyan buildings.</span>&nbsp;Their buildings are opulently decorated with ionic columns and gold
 trim. </span><span class="A-audiobook">Time Lord architecture has been described as
 'High Technology' combined with 'High Gothic.' by some, but others feel it
-is closer to he human form known as&nbsp;Art Deco. </span><span class="A-audiobook">In keeping with High Gothic traditons, <span class="A-licensed">most rooms on Gallifrey are, by human standards, deliberately under lit.</span> The&nbsp;decor of the Capitol <span class="A-fanon">(and presumably the building in other cities) </span>can be changed in the same way that a TARDIS’s desk-top theme can be changed.</span><span class="A-audiobook">
+is closer to he human form known as&nbsp;Art Deco. </span><span class="A-audiobook">In keeping with High Gothic traditons, <span class="A-licensed">most rooms on Gallifrey are, by human standards, deliberately under lit.</span> The&nbsp;decor of the Capitol <span class="A-fanon">(and presumably the buildings in other cities) </span>can be changed in the same way that a TARDIS’s desk-top theme can be changed.</span><span class="A-audiobook">
 </span><span class="A-audiobook">The walls of the living
 							quarters can have their color changed by adjusting the contrast knob.</span><span class="A-audiobook"> Gallifreyan living quarters smell of incense.</span><span class="A-audiobook"> <br><br>Using block-transfer computation, massive, transcendental,
 buildings can be fabricated in place almost instantaneously.&nbsp;But
 the architectural plans and virtual model must be completely worked out
 beforehand. </span>
-						<span class="A-alternate">The strong and ridged gravinium is the most common construction material on Gallifrey.</span><span class="A-tv"> </span><span class="A-audiobook">Gallifreyan building materials are molecularly bonded, and plates have titanium rivets. </span><span class="A-tv">The valuable brass like Machenite is the finishing material of choice for the interior of important
+						<span class="A-alternate"></span><span class="A-audiobook">Gallifreyan building materials are molecularly bonded, and plates have titanium rivets. </span><span class="A-alternate">The strong and ridged gravinium is the most common building material on Gallifrey.</span><span class="A-tv"> </span><span class="A-audiobook"></span><span class="A-tv">The valuable brass like Machenite is the finishing material of choice for the interior of important
 							rooms. Lead is not a common building material and few on Gallifrey are trained in its manipulation.&nbsp;</span><span class="A-audiobook"></span><span class="A-notbbc"><br><br></span><span class="A-audiobook">Gallifreyan
 furniture is kinetic and be re-arranged using a control panel. Many
 areas of the city are rigged with panoptics that observer and recored
@@ -2007,10 +2007,8 @@ Shobogans became slang Gallifreyan <span class="A-audiobook">for 'new age' dropo
 								<span class="A-infinity">"Time moves in circles" - old Gallifreyan proverb</span></li><li><span class="A-infinity"><span class="A-licensed">&nbsp;“Time will tell, it always does.” - an expression that dates back to at least the time of Omega.</span><br></span></li>
 							<li>
 								<span class="A-licensed">"Twelve rejuvenations all, / and not a season more, / hath been the lot of the Time Lords, / since the darker days
-									of yore . . ."</span>
-							</li>
-							<li>
-								<span class="A-audiobook">"What goes bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang
+									of yore . . ."</span></li><li><span class="A-licensed"><span class="A-notbbc">Urizen’s Beard – Time Lord profanity.&nbsp; </span>&nbsp;<br></span></li>
+							<li><span class="A-audiobook">"What goes bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang thud, bang
 									thud, bang thud, bang thud, bang thud? A Time Lord committing suicide." - Graffito the Prydonian. </span>
 							</li>
 							<li>
